Showing base results (toggled).

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,3 +40,4 @@ en:
   results_from: 'Results in'
   perform_reactions: 'Perform reactions'
   reactions: 'Reactions'
+  toggle_results: 'toggle results'
