Selecting over reactions.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -46,3 +46,4 @@ en:
   molecular_mass: 'Molecular mass'
   atoms_number: 'Atoms number'
   rings_number: 'Rings number'
+  choose_reaction: 'Choose the reaction'
